--- a/GeoExtraction.fsproj
+++ b/GeoExtraction.fsproj
@@ -19,4 +19,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Parallel" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
